# meal-planner

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md  compose.yaml  deny.toml  otel-collector-config.yaml
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml
crates/application/: Cargo.toml
crates/application/src/: lib.rs  recipes.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs  recipes.rs  telemetry.rs
crates/web/: Cargo.toml
crates/web/src/: index.html  lib.rs  main.rs
crates/web/tests/: recipes.rs
migrations/: 0001_init.sql
