[workspace]
resolver = "3"
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/web",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates — depend on these with `foo = { workspace = true }`
domain = { path = "crates/domain" }
application = { path = "crates/application" }
infrastructure = { path = "crates/infrastructure" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web
axum = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time — jiff is the newer alternative to chrono, worth trying
jiff = { version = "0.2", features = ["serde"] }

# Errors
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
