[workspace]
resolver = "3"
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/web",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
publish = false

[workspace.dependencies]
# Internal crates — depend on these with `foo = { workspace = true }`
domain = { path = "crates/domain" }
application = { path = "crates/application" }
infrastructure = { path = "crates/infrastructure" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web
axum = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time — jiff is the newer alternative to chrono, worth trying
jiff = { version = "0.2", features = ["serde"] }

# Errors
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry — traces + metrics via OTLP/gRPC
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace", "metrics"] }
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = "0.32"

# HTTP middleware (trace, request-id; the `uuid` feature pulls in MakeRequestUuid)
tower-http = { version = "0.6", features = ["trace", "request-id", "uuid"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Persistence
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "uuid"] }

# Test-only: drive axum routers without binding a port
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
