[package]
name = "infrastructure"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
domain = { workspace = true }
application = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
# TODO: add sqlx when wiring up persistence:
# sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
