[package]
name = "infrastructure"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
domain = { workspace = true }
application = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Telemetry
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }

# Persistence
sqlx = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
