[package]
name = "web"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
domain = { workspace = true }
application = { workspace = true }
infrastructure = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
