[package]
name = "web"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
domain = { workspace = true }
application = { workspace = true }
infrastructure = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
serde_json = { workspace = true }
